# tukey

./: rascunho.txt  run_tukey.sh  solution.txt  tukey.jl  tukey.lp
instances/karate/: karate.gml.gz.txt  karate.graphml
notebook/: __mip_karate_form1.lp  circut_example.lp  cube.lp  grafics_graph.ipynb  igraph_teste.ipynb  inst_edges.ipynb  inst_networkx.ipynb  inst_tudeset.ipynb  karate.lp  karate_0_v2.lp  lp_fmax_internet_200_2.ipynb  lp_fmax_karate.ipynb  lp_fmin_internet_200_1.ipynb  lp_fmin_internet_200_2.ipynb  lp_fmin_karate.ipynb  lp_karate_form1.lp  lp_peterson_form1.lp  mip_fmax_internet_200_2.ipynb  mip_fmin_internet_200_1 (copy).ipynb  mip_fmin_internet_200_1.ipynb  mip_fmin_internet_200_10.ipynb  mip_fmin_internet_200_2.ipynb  mip_fmin_internet_200_3.ipynb  mip_fmin_internet_200_4.ipynb  mip_fmin_internet_200_5.ipynb  mip_fmin_internet_200_6.ipynb  mip_fmin_internet_200_7.ipynb  mip_fmin_internet_200_8.ipynb  mip_fmin_internet_200_9.ipynb  mip_fmin_internet_300_1.ipynb  mip_fmin_internet_300_2.ipynb  mip_fmin_internet_300_3.ipynb  mip_fmin_internet_300_4.ipynb  mip_fmin_internet_300_5.ipynb  mip_fmin_internet_teste.ipynb  mip_fmin_internet_zeta_200_1.ipynb  mip_fmin_internet_zeta_200_2.ipynb  mip_fmin_karate.ipynb  mip_internet_graph_fmin.lp  mip_karate_club_rltForm1.lp  (+54 more)
notebook/.ipynb_checkpoints/: 2clsr_cutStd_csifa-checkpoint.ipynb
notebook/karate/: mip_fmax_karate.ipynb
notebook/lp/: lp_karate_form1_2.lp  lp_karate_max_neighbors_0.lp  lp_karate_max_neighbors_1.lp  lp_neighbors_form1_2.lp  (+86 more)
report/: out_karate_exact.txt  out_karate_rf.txt
result/: karate_exact.txt  karate_lp.tex  karate_mip.tex  karate_rf.txt  lp_fmin_x0fix_c2_diag_matrix.txt  lp_fmin_x0fix_c2_full_matrix.txt  lp_internet_1.tex  lp_tukey_erdos_form1.txt  lp_tukey_karate2.txt  lp_tukey_karate_form0.txt  lp_tukey_karate_form1.txt  lp_tukey_peterson_form1.txt  lp_tukey_random_internet_100_rltForm1.txt  mip_fmax_internet_graph_200_1.txt  mip_fmax_internet_graph_200_2.txt  mip_fmax_internet_graph_200_3.txt  mip_fmax_internet_graph_200_4.txt  mip_fmax_miset_internet_graph_100_1.txt  mip_fmin_internet_graph_100_1.txt  mip_fmin_internet_graph_200_1.txt  mip_fmin_internet_graph_200_10.txt  mip_fmin_internet_graph_200_2.txt  mip_fmin_internet_graph_200_7.txt  mip_fmin_internet_graph_200_8.txt  mip_fmin_internet_graph_200_9.txt  mip_fmin_karate.txt  mip_miset_internet_graph_200_1.txt  mip_miset_internet_graph_200_3.txt  mip_miset_internet_graph_200_4.txt  mip_tukey_erdos_form0.txt  mip_tukey_erdos_form1.txt  mip_tukey_karate0.txt  mip_tukey_karate1.txt  mip_tukey_karate_club_form0.txt  mip_tukey_karate_club_form1.txt  mip_tukey_karate_form0.txt  mip_tukey_karate_form1.txt  mip_tukey_random_internet_100_cutForm1.txt  mip_tukey_random_internet_100_form0.txt  mip_tukey_random_internet_100_form1.txt  (+3 more)
seiffarth/: examples.sh  install_approximation.sh  install_evaluation.sh  install_tukey.sh  installation.sh  karate_aprox.sh  links.txt  net_aprox.sh
seiffarth/Approximation/: CMakeLists.txt
seiffarth/Approximation/Algorithms/: MCSS.cpp  MCSS.h  MCSS.txx  TukeyDepth.h  TukeyDepth.txx
seiffarth/Approximation/ClosureOperators/: BaseOperator.cpp  BaseOperator.h  GraphClosures.cpp  GraphClosures.h
seiffarth/Approximation/Data/: Data.h  Data.txx  GraphData.h  OuterplanarGraphData.h  SimpleGraph.h
seiffarth/Approximation/InitUpdate/: GraphInitUpdate.cpp  GraphInitUpdate.h  InitUpdateBase.cpp  InitUpdateBase.h  InitUpdateBase.tpp
seiffarth/Approximation/Utils/: ApproximationFunctions.cpp  ApproximationFunctions.h  Classificators.cpp  Classificators.h  CoreFunctions.cpp  CoreFunctions.h  DataClasses.h  Enums.h  Generators.cpp  Generators.h  GraphFunctions.cpp  GraphFunctions.h  GraphFunctions.txx  GraphStructs.cpp  GraphStructs.h  Graphs.cpp  Graphs.h  LoadTUDortmundGraphData.cpp  LoadTUDortmundGraphData.h  OuterPlanarSubgraphMitchell.cpp  OuterPlanarSubgraphMitchell.h  OuterplanarSubgraph.cpp  OuterplanarSubgraph.h  OuterplanarSubgraphDFS.cpp  OuterplanarSubgraphDFS.h  StaticFunctions.cpp  StaticFunctions.h  drawing.cpp  drawing.h  graph_generators.cpp  graph_generators.h  graphio.cpp  graphio.h  pattern_generator.h  pattern_generator.txx  subgraphs.cpp  subgraphs.h  subgraphs.txx
seiffarth/Approximation/src/: approximate_tukey.cpp  cores.cpp
seiffarth/Evaluation/: CMakeLists.txt  evaluation.cpp
seiffarth/TukeyDepth/: CMakeLists.txt  main.cpp  tukey.cpp
seiffarth/TukeyDepth/Algorithm/: TukeyDepth.cpp  TukeyDepth.h
src/: Data.jl  Parameters.jl  exact.jl  fgraphs.py  fmax_tukey_inst.py  fmax_tukey_random.py  fmin_tukey_inst.py  fmin_tukey_random.py  main_tukey_inst.py  main_tukey_random.py  random_internet.py  relax_and_fix.jl  run_fmax_tukey_inst.sh  run_fmax_tukey_random.sh  run_fmin_tukey_inst.sh  run_fmin_tukey_random.sh  run_random.sh  run_tukey_inst.sh  run_tukey_random.sh  saida.txt  saida_fmax.txt  teste.py  testes_callback.ipynb  tukey.py  tukey_fmax.py  tukey_fmax_c0.py  tukey_fmax_c0_noclique.py  tukey_fmax_c1.py  tukey_fmax_c1_noclique.py  tukey_fmax_c2.py  tukey_fmax_cut_miset_c3.py  tukey_fmax_cutb_miset_c3.py  tukey_fmax_miset.py  tukey_fmax_miset_c2.py  tukey_fmax_miset_c3.py  tukey_fmax_miset_n0.py  tukey_fmin.py  tukey_fmin_c0.py  tukey_fmin_c0_noclique.py  tukey_fmin_c1.py  (+25 more)
src_jl/: Parameters.jl  exact.jl
(+1104 files in other folders)
